fix: reviews mobile version aligned

--- a/src/components/Reviews/Reviews.module.scss
+++ b/src/components/Reviews/Reviews.module.scss
@@ -29,3 +29,11 @@
         align-items: center;
     }
 }
+
+@media (max-width: 960px) {
+    .reviews {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        }
+    }
+}
